Bug 92528 - UsageInfo crash on exit
Summary: UsageInfo crash on exit
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-07-03 16:05 UTC by Michael Meeks
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2015-07-03 16:05:41 UTC
Just exited a build from: ff4b8d39e649ed56770b28550158b5148432ee48

on Windows, having run some LibreLogo foo - and I got an unhappy un-caught exception in MSVC:

 	KernelBase.dll!_RaiseException@16()	Unknown
 	msvcr120d.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 154	C++
 	comphelper.dll!comphelper::getProcessServiceFactory() Line 64	C++
 	comphelper.dll!comphelper::getProcessComponentContext() Line 96	C++
>	sfxlo.dll!`anonymous namespace'::UsageInfo::save() Line 633	C++
 	sfxlo.dll!`anonymous namespace'::UsageInfo::~UsageInfo() Line 612	C++
 	sfxlo.dll!`rtl::Static<`anonymous namespace'::UsageInfo,A0xddb81cae::theUsageInfo>::StaticInstance::operator()'::`2'::`dynamic atexit destructor for 'instance''()	C++
 	sfxlo.dll!_CRT_INIT(void * hDllHandle, unsigned long dwReason, void * lpreserved) Line 416	C
 	sfxlo.dll!__DllMainCRTStartup(void * hDllHandle, unsigned long dwReason, void * lpreserved) Line 522	C
 	sfxlo.dll!_DllMainCRTStartup(void * hDllHandle, unsigned long dwReason, void * lpreserved) Line 472	C
 	ntdll.dll!_LdrpCallInitRoutine@16()	Unknown
 	ntdll.dll!_LdrShutdownProcess@0()	Unknown
 	ntdll.dll!_RtlExitUserProcess@4()	Unknown
 	kernel32.dll!_ExitProcessStub@4()	Unknown
 	msvcr120d.dll!__crtExitProcess(int status) Line 776	C
 	msvcr120d.dll!doexit(int code, int quick, int retcaller) Line 678	C
 	msvcr120d.dll!exit(int code) Line 417	C
 	soffice.bin!__tmainCRTStartup() Line 662	C
 	soffice.bin!WinMainCRTStartup() Line 466	C
 	kernel32.dll!@BaseThreadInitThunk@12()	Unknown

This is the exception:

Reference< XMultiServiceFactory > getProcessServiceFactory()
{
    Reference< XMultiServiceFactory> xReturn;
    xReturn = localProcessFactory( xReturn, false );
    if ( !xReturn.is() )
    {
        throw DeploymentException( "null process service factory" );

I guess this de-init is happening rather after it should somehow.
Comment 1 Michael Meeks 2015-07-03 16:06:35 UTC
Kendy - looks like one of yours (?) =) can we store the setting in some module local variable to avoid needing to fetch it again on exit (perhaps) =)
Comment 2 Michael Meeks 2015-07-03 16:08:21 UTC
I assume this is a consequence of the CheckBox to turn off UsageInfo (?)
Comment 3 Michael Meeks 2015-07-03 16:09:20 UTC
Unhandled exception at 0x7558C42D in soffice.bin: Microsoft C++ exception: com::sun::star::uno::DeploymentException at memory location 0x00B5F504.

is the output etc. =) but of course, perhaps a benign issue.
Comment 4 Commit Notification 2015-07-03 18:45:27 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94b38840f5e4072577a1e709cebadd746621aacc

tdf#92528: Saving of usage info can happen very late in the tear down.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jan Holesovsky 2015-07-03 18:47:38 UTC
Hopefully this fixes that :-)
Comment 6 Commit Notification 2015-07-03 19:44:49 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ee52080ba07b42addfbb2d038fcff711d0fb64c&h=libreoffice-5-0

tdf#92528: Saving of usage info can happen very late in the tear down.

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.