tdf#92528: Saving of usage info can happen very late in the tear down.

Change-Id: Id545f3447472a8e6ee137a6630ee14b45a45d673